Fixed some warnings. Detected issue on Safari will start to fix it

--- a/styles/style.css
+++ b/styles/style.css
@@ -234,6 +234,7 @@ main {
     font-size: 7.2rem;
     position: relative;
     overflow: hidden;
+    -webkit-user-select: none;
     user-select: none;
     box-shadow: 0px 10px 20px -10px rgba(var(--box-shadow-rgb), 1);
 }
